--- a/config/autoload/remin.local.php.dist
+++ b/config/autoload/remin.local.php.dist
@@ -1,7 +1,7 @@
 <?php
 
 return [
-    'tervel' => [
+    'remin' => [
         'numero_territorios' => 64,
         'admin' => [
             'user' => 'adminusername',
